# VST_Harmonica

./: .gitignore  IMPLEMENTATION_PLAN.md  build_ninja  build_ninja.bat
.github/workflows/: build-plugin.yml
demo/: index.html  manifest.json  sw.js
demo/css/: style.css
demo/js/: app.js  audio-engine.js  gsheet.js
plugin/: CMakeLists.txt  build_log.txt  build_log2.txt  build_mac.sh  build_windows.bat
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/DSP/: AutoTuner.cpp  AutoTuner.h  BrassEngine.cpp  BrassEngine.h  EffectsChain.cpp  EffectsChain.h  HarmonicaEngine.cpp  HarmonicaEngine.h  SafeMode.cpp  SafeMode.h  StringEngine.cpp  StringEngine.h  WoodwindEngine.cpp  WoodwindEngine.h
plugin/Source/UI/: CircleOfFifths.cpp  CircleOfFifths.h  DawEditor.cpp  DawEditor.h  EffectsPanel.cpp  EffectsPanel.h  HarmonicaView.cpp  HarmonicaView.h  InstrumentPanel.cpp  InstrumentPanel.h  TurboLookAndFeel.cpp  TurboLookAndFeel.h
plugin/Source/Util/: MusicTheory.h
